# openclawagents

./: .gitignore  LICENSE  README.md
agent-registry/api/: package.json  tsconfig.json  wrangler.jsonc
agent-registry/api/src/: agent-card.ts  idl.json  index.ts  solana.ts
agent-registry/cli/: package.json  tsconfig.json
agent-registry/cli/src/: index.ts
agent-registry/cli/src/commands/: info.ts  register.ts  update.ts  wallet.ts
agent-registry/cli/src/lib/: client.ts  config.ts
agent-registry/program/: Anchor.toml
agent-registry/program/programs/agent-registry/: Cargo.toml
agent-registry/program/programs/agent-registry/src/: errors.rs  lib.rs  state.rs
agent-registry/program/programs/agent-registry/src/instructions/: feedback.rs  initialize.rs  mod.rs  register.rs  update.rs
agent-registry/program/tests/: agent-registry.ts
platform/: package.json  schema.sql  setup.sh  wrangler.jsonc
platform/api/: package.json  schema.sql  tsconfig.json  wrangler.jsonc
platform/api/src/: db.ts  index.ts
platform/sandbox/: Dockerfile  package.json  start-openclaw.sh  wrangler.jsonc
platform/sandbox/src/: index.ts
platform/src/: index.ts  landing.ts  provision.ts  tenant-worker-template.ts  types.ts
platform/web/: index.html  package.json  tailwind.config.js  tsconfig.json
platform/web/src/: App.tsx  index.css  main.tsx
platform/web/src/lib/: api.ts  (+1 more)
skills/: README.md
skills/cobot/: SKILL.md
skills/cobot/references/: agent-registry.md  api-key-setup.md  kalshi-trading.md  mcp-integration.md  polymarket-trading.md  pumpfun-launch.md  token-swaps.md
(+12 files in other folders)
