[package]
name = "agent-registry"
version = "0.1.0"
description = "Solana Agent Registry - register agents, declare skills, build reputation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
